--- a/af2_serverless.yaml
+++ b/af2_serverless.yaml
@@ -3,9 +3,12 @@ channels:
   - conda-forge
 
 dependencies:
-  - python=3.11
-  - boto3==1.34.34
-  - python-env==1.0.0
-  - runpod==1.6.0
-  - numpy==1.26.3
-  - absl-py==2.1.0
+  - python=3.9
+  - boto3=1.34.34
+  - python-dotenv=1.0.0
+  # Use pip to install additional packages
+  - pip
+  - pip:
+    - runpod==1.6.0
+  - pip:
+      - -e alphafold_MSA
