--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,27 +1,45 @@
-name: docker hub
+name: Publish Docker image
 
 on:
   push:
     branches:
       - "main"
+      - "dev"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+
+      -
+        name: Setup tag
+        id: setup_tag
+        run: |
+          if [[ $GITHUB_REF == 'refs/heads/dev' ]]; then
+            echo "::set-output name=tag::francescooteri/af2_msa_serverless:dev"
+          else
+            echo "::set-output name=tag::francescooteri/af2_msa_serverless:latest"
+          fi
+
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Set up Docker Buildx
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      -
+        name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Build and push
+
+      -
+        name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: Dockerfile
+          file: ./docker/Dockerfile
           push: true
-          tags: francescooteri/af2_msa_serverless:latest
+          tags: ${{ steps.setup_tag.outputs.tag }}
