--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,31 +7,26 @@ on:
       - "dev"
 
 jobs:
-  free-disk-space:
+  build-and-publish:
     runs-on: ubuntu-latest
     steps:
-      # If there is a problem with this GitHub Actions, this step will fail
+      # Free Disk Space
       - name: Free Disk Space
         uses: jlumbroso/free-disk-space@main
         with:
           tool-cache: true
-
-          # all of these default to true, but feel free to set to
-          # false if necessary for your workflow
           android: true
           dotnet: true
           haskell: true
           large-packages: true
           swap-storage: true
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Checkout
+
+      # Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      -
-        name: Setup tag
+      # Setup tag
+      - name: Setup tag
         id: setup_tag
         run: |
           if [[ $GITHUB_REF == 'refs/heads/dev' ]]; then
@@ -40,19 +35,19 @@ jobs:
             echo "::set-output name=tag::francescooteri/af2_msa_serverless:latest"
           fi
 
-      -
-        name: Login to Docker Hub
+      # Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      -
-        name: Set up Docker Buildx
+      # Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      -
-        name: Build and push
+      # Build and push Docker image
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
