--- a/env.sample
+++ b/env.sample
@@ -1,1 +1,8 @@
-API_TOKEN = XXXXXXXXXX
+BUCKET_ACCESS_KEY_ID=
+BUCKET_SECRET_ACCESS_KEY=
+BUCKET_NAME=
+BUCKET_ENDPOINT_URL=
+BUCKET_REGION=
+RUNPOD_API_TOKEN=
+RUNPOD_API_ENDPOINT=
+TEST=
