--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ extend-select = ["E1", "W2"]
 
 # Specify individual checks to disable
 # (useful if you have used --ignore or --extend-ignore)
-extend-ignore = ["E203", "W503"]
+extend-ignore = ["E203"]
 
 # Set the max line length (default is 88)
 max-line-length = 120
