--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,24 @@
 [project]
-requires-python = ">=3.10"
+requires-python = ">=3.9"
+
+[tool.isort]
+profile = "black"
+add_imports = "from __future__ import annotations"
 
 [tool.ruff.lint]
 extend-select = [
   "UP",  # pyupgrade
   "D",   # pydocstyle
+  "F821",
 ]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+
+[tool.mypy]
+python_version = "3.8"
+strict_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_unused_configs = true
