--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,7 @@ repos:
       language: system
       types: [python] # This ensures only Python files are passed
       entry: pyupgrade
-      args: [--py37-plus]
+      args: [--py39-plus]
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.5.0
@@ -24,3 +24,20 @@ repos:
     - id: ruff
     # Run the formatter.
     - id: ruff-format
+
+- repo: local
+  hooks:
+    - id: mypy
+      name: mypy
+      entry: mypy
+      language: python
+      # use your preferred Python version
+      language_version: python3.9
+      additional_dependencies: ["mypy==1.8.0"]
+      # trigger for commits changing Python files
+      types: [python]
+      # use require_serial so that script
+      # is only called once per commit
+      require_serial: true
+      # print the number of files as a sanity-check
+      verbose: true
