--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,5 @@ python_version = "3.9"
 files = "src/**/*.py"
 strict_optional = true
 warn_redundant_casts = true
-warn_unused_ignores = true
+warn_unused_ignores = false
 warn_unused_configs = true
