--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,32 +1,63 @@
 # this is optional, use `pre-commit autoupdate` to get the latest rev!
+default_language_version:
+  python: python3.9
+
+default_stages: [commit]
+
+exclude: '^(tests/.*\.pdb|docs/.*\.py)$'
+
 repos:
-- repo: local
-  hooks:
-    - id: pyupgrade
-      name: pyupgrade
-      language: system
-      types: [python] # This ensures only Python files are passed
-      entry: pyupgrade
-      args: [--py39-plus]
+  - repo: https://github.com/ambv/black
+    rev: 24.2.0
+    hooks:
+      - id: black
+        args:
+          - --target-version=py39
 
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.5.0
-  hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
 
-- repo: https://github.com/astral-sh/ruff-pre-commit
-  # Ruff version.
-  rev: v0.2.1
-  hooks:
-    # Run the linter.
-    - id: ruff
-    # Run the formatter.
-    - id: ruff-format
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: check-ast # Simply check whether the files parse as valid python
+      - id: check-case-conflict # Check for files that would conflict in case-insensitive filesystems
+      - id: check-builtin-literals # Require literal syntax when initializing empty or zero Python builtin types
+      - id: check-docstring-first # Check a common error of defining a docstring after code
+      - id: check-merge-conflict # Check for files that contain merge conflict strings
+      - id: check-yaml # Check yaml files
+      - id: debug-statements
+      - id: end-of-file-fixer # Ensure that a file is either empty, or ends with one newline
+      - id: mixed-line-ending # Replace or checks mixed line ending
+      - id: trailing-whitespace # This hook trims trailing whitespace
+        exclude: \.csv$
+      - id: check-added-large-files
+        args: ["--maxkb=256", --enforce-all]
 
-- repo: local
-  hooks:
+  - repo: local
+    hooks:
+      - id: isort
+        name: isort
+        language: system
+        entry: isort
+        args: ["--profile", "black"]
+        types: [python] # This ensures only Python files are passed
+
+  - repo: https://github.com/pycqa/pydocstyle
+    rev: 6.3.0
+    hooks:
+      - id: pydocstyle
+        args:
+          - --convention=google
+          - --add-ignore=D100,D104,D105,D415,D205,D107
+
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v3.1.0
+    hooks:
+      - id: conventional-pre-commit
+        stages: [commit-msg]
+        args: [ci, build, docs, feat, fix, perf, refactor, style, test]
+
+  - repo: local
+    hooks:
     - id: mypy
       name: mypy
       entry: mypy
@@ -41,3 +72,24 @@ repos:
       require_serial: true
       # print the number of files as a sanity-check
       verbose: true
+
+  - repo: local
+    hooks:
+      - id: pyupgrade
+        name: pyupgrade
+        language: system
+        types: [python] # This ensures only Python files are passed
+        entry: pyupgrade
+        args: [--py37-plus]
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.2.2
+    hooks:
+      - id: ruff
+        args: ["--fix"]
+        exclude: &fixtures tests(/\w*)*/functional/|tests/input|doc/data/messages|tests(/\w*)*data/
+      - id: ruff
+        name: ruff-doc
+        files: doc/data/messages
+        args: ["--config", "pyproject.toml"]
+      - id: ruff-format
